--- a/xyz.ipynb
+++ b/xyz.ipynb
@@ -50,6 +50,142 @@
     "    print('n = ',n)\n",
     "    print(wynik)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pętla w pętli :D\n",
+    "for i in range(1,11):\n",
+    "    for j in range(1,5):\n",
+    "        print(\"*\",end=\"\")\n",
+    "        \n",
+    "    print()\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 zagnieżdżone pętle for trening!\n",
+    "\n",
+    "for i in range(0,2):\n",
+    "    print(\"Teraz wykonuje się pętla I\")\n",
+    "    for j in range(0,2):\n",
+    "        print(\"Teraz wykonuje się pętla J\")\n",
+    "        for k in range(0,2):\n",
+    "            print(\"Teraz wykonuje się pętla K\")\n",
+    "           # print(f\"i = {i}, j = {j}, k = {k}\")\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "        # 0 0 0\n",
+    "        # 0 0 1\n",
+    "        # 0 1 0\n",
+    "        # 0 1 1\n",
+    "        # 1 0 0\n",
+    "        # 1 0 1\n",
+    "        # 1 1 0\n",
+    "        # 1 1 1\n",
+    "               # I J K K  J K K I  J K K J  K K\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teraz wykonuje się pętla I = 0\n",
+      "Teraz wykonuje się pętla J = 0\n",
+      "Teraz wykonuje się pętla K = 0\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n",
+      "Teraz wykonuje się pętla K = 1\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n",
+      "Teraz wykonuje się pętla J = 1\n",
+      "Teraz wykonuje się pętla K = 0\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n",
+      "Teraz wykonuje się pętla K = 1\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n",
+      "Teraz wykonuje się pętla I = 1\n",
+      "Teraz wykonuje się pętla J = 0\n",
+      "Teraz wykonuje się pętla K = 0\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n",
+      "Teraz wykonuje się pętla K = 1\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n",
+      "Teraz wykonuje się pętla J = 1\n",
+      "Teraz wykonuje się pętla K = 0\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n",
+      "Teraz wykonuje się pętla K = 1\n",
+      "Teraz wykonuje się pętla V = 0\n",
+      "Teraz wykonuje się pętla V = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,2):\n",
+    "    print(f\"Teraz wykonuje się pętla I = {i}\")\n",
+    "    for j in range(0,2):\n",
+    "        print(f\"Teraz wykonuje się pętla J = {j}\")\n",
+    "        for k in range(0,2):\n",
+    "            print(f\"Teraz wykonuje się pętla K = {k}\")\n",
+    "            for v in range(0,2):\n",
+    "                print(f\"Teraz wykonuje się pętla V = {v}\") \n",
+    "    \n",
+    "    # I J K V V   K V V J K   V V K V V  I J K V V  K V V J K  V V K V V\n",
+    "    \n",
+    "    # 0000\n",
+    "    # 0001\n",
+    "    # 0010\n",
+    "    # 0011\n",
+    "    # 0100\n",
+    "    # 0101\n",
+    "    # 0110\n",
+    "    # 0111\n",
+    "    # 1000\n",
+    "    # 1001\n",
+    "    # 1010\n",
+    "    # 1011\n",
+    "    # 1100\n",
+    "    # 1101\n",
+    "    # 1110\n",
+    "    # 1111           \n",
+    "                "
+   ]
   }
  ],
  "metadata": {
