--- a/xyz.ipynb
+++ b/xyz.ipynb
@@ -116,46 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Teraz wykonuje się pętla I = 0\n",
-      "Teraz wykonuje się pętla J = 0\n",
-      "Teraz wykonuje się pętla K = 0\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n",
-      "Teraz wykonuje się pętla K = 1\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n",
-      "Teraz wykonuje się pętla J = 1\n",
-      "Teraz wykonuje się pętla K = 0\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n",
-      "Teraz wykonuje się pętla K = 1\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n",
-      "Teraz wykonuje się pętla I = 1\n",
-      "Teraz wykonuje się pętla J = 0\n",
-      "Teraz wykonuje się pętla K = 0\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n",
-      "Teraz wykonuje się pętla K = 1\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n",
-      "Teraz wykonuje się pętla J = 1\n",
-      "Teraz wykonuje się pętla K = 0\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n",
-      "Teraz wykonuje się pętla K = 1\n",
-      "Teraz wykonuje się pętla V = 0\n",
-      "Teraz wykonuje się pętla V = 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0,2):\n",
     "    print(f\"Teraz wykonuje się pętla I = {i}\")\n",
@@ -173,18 +136,58 @@
     "    # 0010\n",
     "    # 0011\n",
     "    # 0100\n",
+    "    \n",
     "    # 0101\n",
     "    # 0110\n",
     "    # 0111\n",
     "    # 1000\n",
     "    # 1001\n",
+    "    \n",
     "    # 1010\n",
     "    # 1011\n",
     "    # 1100\n",
     "    # 1101\n",
     "    # 1110\n",
+    "    \n",
     "    # 1111           \n",
     "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teraz wykonuje się pętla i = 0\n",
+      "teraz wykonuje się pętla j = 0\n",
+      "teraz wykonuje się pętla j = 1\n",
+      "teraz wykonuje się pętla i = 1\n",
+      "teraz wykonuje się pętla j = 0\n",
+      "teraz wykonuje się pętla j = 1\n",
+      "teraz wykonuje się pętla i = 2\n",
+      "teraz wykonuje się pętla j = 0\n",
+      "teraz wykonuje się pętla j = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,3):\n",
+    "    print(f\"teraz wykonuje się pętla i = {i}\")\n",
+    "    for j in range(0,2):\n",
+    "        print(f\"teraz wykonuje się pętla j = {j}\")\n",
+    "        \n",
+    "        \n",
+    "# I j j  i jj ijj\n",
+    "#00\n",
+    "#01\n",
+    "#10\n",
+    "#11\n",
+    "#20\n",
+    "#21     "
    ]
   }
  ],
