--- a/xyz.ipynb
+++ b/xyz.ipynb
@@ -155,25 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "teraz wykonuje się pętla i = 0\n",
-      "teraz wykonuje się pętla j = 0\n",
-      "teraz wykonuje się pętla j = 1\n",
-      "teraz wykonuje się pętla i = 1\n",
-      "teraz wykonuje się pętla j = 0\n",
-      "teraz wykonuje się pętla j = 1\n",
-      "teraz wykonuje się pętla i = 2\n",
-      "teraz wykonuje się pętla j = 0\n",
-      "teraz wykonuje się pętla j = 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0,3):\n",
     "    print(f\"teraz wykonuje się pętla i = {i}\")\n",
@@ -188,6 +172,43 @@
     "#11\n",
     "#20\n",
     "#21     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Liczby od 2 do 100 bez licz pierwszych\n",
+    "for i in range(2,101):\n",
+    "    is_Prime = False\n",
+    "    for j in range(2,i):\n",
+    "        if i % j == 0:\n",
+    "          is_Prime = True\n",
+    "          break\n",
+    "    if is_Prime:\n",
+    "     print(i) \n",
+    "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Liczby pierwsze od 2 do 100\n",
+    " \n",
+    "for i in range(2,100):\n",
+    "    is_Prime = True\n",
+    "    for j in range(2,i):\n",
+    "        if i % j == 0:\n",
+    "            is_Prime = False\n",
+    "            break\n",
+    "    if is_Prime:\n",
+    "        print(i)     \n",
+    "     "
    ]
   }
  ],
