--- a/xyz.ipynb
+++ b/xyz.ipynb
@@ -165,7 +165,7 @@
     "        print(f\"teraz wykonuje się pętla j = {j}\")\n",
     "        \n",
     "        \n",
-    "# I j j  i jj ijj\n",
+    "# Ijj  i jj ijj\n",
     "#00\n",
     "#01\n",
     "#10\n",
@@ -209,6 +209,79 @@
     "    if is_Prime:\n",
     "        print(i)     \n",
     "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wynik to 0,00\n",
+      "Wynik to 0,01\n",
+      "Wynik to 0,10\n",
+      "Wynik to 0,11\n",
+      "Wynik to 0,20\n",
+      "Wynik to 0,21\n",
+      "Wynik to 1,00\n",
+      "Wynik to 1,01\n",
+      "Wynik to 1,10\n",
+      "Wynik to 1,11\n",
+      "Wynik to 1,20\n",
+      "Wynik to 1,21\n",
+      "Wynik to 2,00\n",
+      "Wynik to 2,01\n",
+      "Wynik to 2,10\n",
+      "Wynik to 2,11\n",
+      "Wynik to 2,20\n",
+      "Wynik to 2,21\n",
+      "Wynik to 3,00\n",
+      "Wynik to 3,01\n",
+      "Wynik to 3,10\n",
+      "Wynik to 3,11\n",
+      "Wynik to 3,20\n",
+      "Wynik to 3,21\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,4):\n",
+    "    for j in range(0,3):\n",
+    "        for k in range(0,2):\n",
+    "            print(f'Wynik to {i}{j}{k}')\n",
+    "            \n",
+    "\n",
+    "            \n",
+    " #000\n",
+    " #001\n",
+    " #010\n",
+    " #011\n",
+    " #020\n",
+    " #021\n",
+    " #100\n",
+    " #101\n",
+    " #110\n",
+    " #111\n",
+    " #120\n",
+    " #121\n",
+    " #200\n",
+    " #201\n",
+    " #210\n",
+    " #211\n",
+    " #220\n",
+    " #221\n",
+    " #300\n",
+    " #301\n",
+    " #310\n",
+    " #311\n",
+    " #320\n",
+    " #321\n",
+    "\n",
+    "           \n",
+    "            "
    ]
   }
  ],
