--- a/xyz.ipynb
+++ b/xyz.ipynb
@@ -213,40 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wynik to 0,00\n",
-      "Wynik to 0,01\n",
-      "Wynik to 0,10\n",
-      "Wynik to 0,11\n",
-      "Wynik to 0,20\n",
-      "Wynik to 0,21\n",
-      "Wynik to 1,00\n",
-      "Wynik to 1,01\n",
-      "Wynik to 1,10\n",
-      "Wynik to 1,11\n",
-      "Wynik to 1,20\n",
-      "Wynik to 1,21\n",
-      "Wynik to 2,00\n",
-      "Wynik to 2,01\n",
-      "Wynik to 2,10\n",
-      "Wynik to 2,11\n",
-      "Wynik to 2,20\n",
-      "Wynik to 2,21\n",
-      "Wynik to 3,00\n",
-      "Wynik to 3,01\n",
-      "Wynik to 3,10\n",
-      "Wynik to 3,11\n",
-      "Wynik to 3,20\n",
-      "Wynik to 3,21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0,4):\n",
     "    for j in range(0,3):\n",
@@ -282,6 +251,157 @@
     "\n",
     "           \n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 5\n",
+    "\n",
+    "while i >-1:\n",
+    "    i-=1\n",
+    "    print(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 3\n",
+    "j = 2\n",
+    "\n",
+    "while i > 0:\n",
+    "    j = 2\n",
+    "    while j > 0:\n",
+    "        j = j -1\n",
+    "        print(f'j={j},i={i}')\n",
+    "    i= i - 1\n",
+    "    print(f'j={j},i={i}')  \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 3\n",
+    "j = 3\n",
+    "\n",
+    "while i > 0:\n",
+    "    j = 3\n",
+    "    while j > 0:\n",
+    "        j = j -1\n",
+    "        print(f'i={i},j={j}')\n",
+    "    i= i - 1\n",
+    "    print(f'zewnetrzna : i={i},j={j}')  \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 3\n",
+    "j = 3\n",
+    "\n",
+    "while i > 0:\n",
+    "    j = 3\n",
+    "    while j > 0:\n",
+    "        print(f'i={i},j={j}')\n",
+    "        j = j -1\n",
+    "    print(f'zewnętrzna i={i},j={j}')\n",
+    "    i = i - 1\n",
+    "    \n",
+    "#33\n",
+    "#32\n",
+    "#31\n",
+    "#zew 30\n",
+    "#23\n",
+    "#22\n",
+    "#21\n",
+    "#zew 20    \n",
+    "       \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "while i < 50:\n",
+    "    i+= 1\n",
+    "    if i == 3:\n",
+    "        continue\n",
+    "    #print(i)\n",
+    "    if i == 20:\n",
+    "        break\n",
+    "    print(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=3,j=2\n",
+      "i=3,j=0\n",
+      " zew i=2,j=0\n",
+      "i=2,j=2\n",
+      "i=2,j=0\n",
+      "i=1,j=2\n",
+      "i=1,j=0\n",
+      " zew i=0,j=0\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 3\n",
+    "j = 3\n",
+    "\n",
+    "while i > 0:\n",
+    "    j = 3\n",
+    "    while j > 0:\n",
+    "     j = j - 1\n",
+    "     if j % 2 != 0:\n",
+    "         continue\n",
+    "     else:\n",
+    "        print(f\"i={i},j={j}\")\n",
+    "        \n",
+    "    i = i - 1 \n",
+    "    if i % 2 != 0:\n",
+    "         continue\n",
+    "    else:\n",
+    "        print(f\" zew i={i},j={j}\")    \n",
+    "    "
    ]
   }
  ],
