I just known lists

--- a/for1.ipynb
+++ b/for1.ipynb
@@ -501,6 +501,52 @@
     "        \n",
     "              "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Franek', 'Dominik', 'Kamil', 'Dominik']\n",
+      "['Franek', 'Dominik', 'Kamil', 'Dominik', 'Franz', 'Dominbik', 'Kamvil']\n",
+      "Kamil\n",
+      "Franek Dominik Kamil Dominik Franz Dominbik Kamvil 0\n",
+      "5\n",
+      "['Dominbik', 'Franek', 'Franz', 'Kamil', 'Kamvil']\n",
+      "['Kamvil', 'Kamil', 'Franz', 'Franek', 'Dominbik']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TO SĄ LISTY\n",
+    "\n",
+    "names = ['Franek','Dominik','Kamil']\n",
+    "names.append('Dominik')\n",
+    "\n",
+    "print(names)\n",
+    "\n",
+    "names.extend(['Franjjek','Dominbik','Kamvil'])\n",
+    "names[4] = 'Franz'\n",
+    "print(names)\n",
+    "print(names[2])\n",
+    "\n",
+    "for name in names:\n",
+    "    print(name,end=\" \")\n",
+    "del names[1]\n",
+    "names.remove('Dominik')\n",
+    "print(names.count('Dominik'))\n",
+    "print(len(names))\n",
+    "\n",
+    "names.sort()\n",
+    "print(names)\n",
+    "\n",
+    "names.sort(reverse=True)\n",
+    "print(names)"
+   ]
   }
  ],
  "metadata": {
