I just known lists and sets

--- a/for1.ipynb
+++ b/for1.ipynb
@@ -547,6 +547,72 @@
     "names.sort(reverse=True)\n",
     "print(names)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Tomek', 'Mariusz', 'Ziomek', 'Kamil', 'Franz', 'Dominik'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Zbiory (SET)\n",
+    "\n",
+    "names = {'Kamil','Mariusz','Dominik'}\n",
+    "names.add('Franz')\n",
+    "\n",
+    "#print(names)\n",
+    "\n",
+    "# for name in names:\n",
+    "#     print(name)\n",
+    "\n",
+    "names.update(['Tomek','Ziomek'])\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = {'Kamil','Ziomo','Franek','Paweł'}\n",
+    "names2 = {'Kamil','Dzban','Wardaszka','Ziomo'}\n",
+    "\n",
+    "#Suma zbiorów - uniom\n",
+    "# print(names.union(names2))\n",
+    "# print(names | names2)\n",
+    "\n",
+    "#Różnica zbiorów - intersection\n",
+    "# print(names.intersection(names2))\n",
+    "# print(names & names2)\n",
+    "\n",
+    "#Różnica - difference\n",
+    "# print(names.difference(names2))\n",
+    "# print(names - names2)\n",
+    "\n",
+    "#Symetryczna róznica - symetric difference \n",
+    "# print(names.symmetric_difference(names2))\n",
+    "# print(names ^ names2)\n",
+    "\n",
+    "#Tworzenie pustego setu\n",
+    "names = set()\n",
+    "print(type(names))\n"
+   ]
   }
  ],
  "metadata": {
