lists sets dicktionary

--- a/for1.ipynb
+++ b/for1.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -612,6 +612,119 @@
     "#Tworzenie pustego setu\n",
     "names = set()\n",
     "print(type(names))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phone_book = {\n",
+    "    'Kamil': 100200300,\n",
+    "    'Mariusz': 666777888,\n",
+    "    'Dominik': 400400400\n",
+    "}\n",
+    "# print(phone_book.get('Kamil'))\n",
+    "# print(phone_book['Kamil'])\n",
+    "\n",
+    "# phone_book['Asia'] = 111111111\n",
+    "# print(phone_book)\n",
+    "\n",
+    "# deleted_phone_number = phone_book.pop('Kamill','Numer nie znaleziony')\n",
+    "# print(deleted_phone_number)\n",
+    "# print(phone_book)\n",
+    "\n",
+    "#klucze\n",
+    "print(\"KLUCZE\")\n",
+    "for element in phone_book:\n",
+    "    print(element)\n",
+    "\n",
+    "print() \n",
+    "print(\"WARTOŚCI\")   \n",
+    "#wartości\n",
+    "for element in phone_book.values():\n",
+    "    print(element)  \n",
+    "    \n",
+    "print() \n",
+    "#Klucze i wartości\n",
+    "print(\"KLUCZE I WARTOŚCI\")\n",
+    "for element in phone_book.items():  \n",
+    "    print(element)   \n",
+    "\n",
+    "print() \n",
+    " \n",
+    "for name, phone_number in phone_book.items():\n",
+    "    print(name + \":\" + str(phone_number))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Krotki - obiekty niemutowalne (niezmienialne)\n",
+    "\n",
+    "names = ('Kamil','Mariusz','Dominik')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#ĆWICZENIE 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n",
+      "15\n",
+      "21\n",
+      "28\n",
+      "36\n",
+      "45\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#ZAD 1\n",
+    "\n",
+    "lista = []\n",
+    "\n",
+    "lista.extend([1,2,3,4,5,6,7,8,9,10])\n",
+    "sum_of_list = 0\n",
+    "\n",
+    "for i in lista:\n",
+    "   # print(lista[i])\n",
+    "    sum_of_list +=i\n",
+    "    print(sum_of_list)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ZAD2\n",
+    "\n",
+    "lista1 = ['aaaa','bbbb','cccccc','dddd','eeeeeeeee']\n",
+    "lista1[1] = 'xd'\n",
+    "print(lista1)"
    ]
   }
  ],
