--- a/for1.ipynb
+++ b/for1.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Max z 3 liczb\n",
+    "# xMax z 3 liczb\n",
     "a = int(input(\"Podaj 1 liczbe\"))\n",
     "b = int(input(\"Podaj 2 liczbe\"))\n",
     "c = int(input(\"Podaj 3 liczbe\"))\n",
@@ -716,15 +716,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 310,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['xcccccc', 'eeeeeeeee']\n"
+     ]
+    }
+   ],
    "source": [
     "#ZAD2\n",
     "\n",
-    "lista1 = ['aaaa','bbbb','cccccc','dddd','eeeeeeeee']\n",
-    "lista1[1] = 'xd'\n",
-    "print(lista1)"
+    "lista1 = ['aaaa','bbbb','xcccccc','zzxx','eeeeeeeee']\n",
+    "\n",
+    "#lista1.sort()\n",
+    "\n",
+    "#print(lista1)\n",
+    "lista2 = []\n",
+    "for element in lista1:\n",
+    "    if len(element) > 5:\n",
+    "      lista2.append(element)  \n",
+    "      \n",
+    "print(lista2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "imiona = [10,2,8,6,11,23,4]\n",
+    "\n",
+    "suma = 0\n",
+    "\n",
+    "for numbers in imiona:\n",
+    "    suma += numbers\n",
+    "    \n",
+    "print(suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kkkkkk', 'mmmmmmmmmm']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['aaa','zz','vvvvv','kkkkkk','mmmmmmmmmm']\n",
+    "\n",
+    "words_more_than_5_letters = []\n",
+    "\n",
+    "for word in words:\n",
+    "    if len(word) > 5:\n",
+    "     words_more_than_5_letters.append(word)\n",
+    "     \n",
+    "print(words_more_than_5_letters)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Największa liczba w liście [1, 64, 3, 100, 20, 23, 11, 333, 1001, 98] to: 1001, a najmniejsza to:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 64, 3, 100, 20, 23,11,333,1001,98]\n",
+    "\n",
+    "smallest = numbers[0]\n",
+    "largest = numbers[0]\n",
+    "\n",
+    "for number in numbers:\n",
+    "    if number < smallest:\n",
+    "        smallest = number\n",
+    "    if number > largest:\n",
+    "        largest = number\n",
+    "print(f'Największa liczba w liście {numbers} to: {largest}, a najmniejsza to:  {smallest}')\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Kamil', 'Mateusz', 'Łukasz'}"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imiona1 = ['Franek','Kamil','Bartosz','Łukasz','Mateusz']\n",
+    "imiona2 = ['Tomek','Aga','Julia','Bartosz','Franek']\n",
+    "\n",
+    "set(imiona1) & set(imiona2)\n",
+    "set(imiona1) - set(imiona2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Anglia': 'Londyn', 'Hiszpania': 'Madryt', 'Niemcy': 'Berlin', 'Polska': 'Warszawa', 'Włochy': 'Rzym'}\n",
+      "Anglia - Londyn\n",
+      "Hiszpania - Madryt\n",
+      "Niemcy - Berlin\n",
+      "Polska - Warszawa\n",
+      "Włochy - Rzym\n"
+     ]
+    }
+   ],
+   "source": [
+    "country_and_capitals = {\n",
+    "    'Niemcy' : 'Berlin',\n",
+    "    'Polska' : 'Warszawa',\n",
+    "    'Hiszpania': 'Madryt',\n",
+    "    'Włochy': 'Rzym',\n",
+    "    'Anglia': 'Londyn'\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# for country, capital in country_and_capitals.items():\n",
+    "#     print(f'{country} - {capital}')\n",
+    "    \n",
+    "country_and_capitals = dict(sorted(country_and_capitals.items()))\n",
+    "print(country_and_capitals)\n",
+    "\n",
+    "for country, capital in country_and_capitals.items():\n",
+    "    print(f'{country} - {capital}')\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Jak': 1, 'sie': 2, 'xd': 1}\n",
+      "Jak: 1\n",
+      "sie: 2\n",
+      "xd: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input (\"Napisz tekst: \")\n",
+    "words = text.split(\" \")\n",
+    "\n",
+    "words_count = {}\n",
+    "\n",
+    "for word in words:\n",
+    "    if words_count.get(word) is not None:\n",
+    "      words_count[word] +=1\n",
+    "    else:\n",
+    "        words_count[word] = 1\n",
+    "print(words_count)\n",
+    "\n",
+    "\n",
+    "for word,count in words_count.items():\n",
+    "    print(f'{word}: {count}')"
    ]
   }
  ],
