--- a/pyton.ipynb
+++ b/pyton.ipynb
@@ -2,72 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n",
-      "21\n",
-      "23\n",
-      "25\n",
-      "27\n",
-      "29\n",
-      "31\n",
-      "33\n",
-      "35\n",
-      "37\n",
-      "39\n",
-      "41\n",
-      "43\n",
-      "45\n",
-      "47\n",
-      "49\n",
-      "51\n",
-      "53\n",
-      "55\n",
-      "57\n",
-      "59\n",
-      "61\n",
-      "63\n",
-      "65\n",
-      "67\n",
-      "69\n",
-      "71\n",
-      "73\n",
-      "75\n",
-      "77\n",
-      "79\n",
-      "81\n",
-      "83\n",
-      "85\n",
-      "87\n",
-      "89\n",
-      "91\n",
-      "93\n",
-      "95\n",
-      "97\n",
-      "99\n"
+      "400-500: 33\n",
+      "300-400: 67\n"
      ]
     }
    ],
    "source": [
-    "for n in range(1,101,2):\n",
-    " print(n)\n",
-    " \n",
+    "with open('praca.txt') as file:\n",
+    " licznik_dobry = 0\n",
+    " licznik_zle = 0\n",
+    " for line in file:\n",
+    "      date, time, ip, code = line.split()\n",
+    "      if 200 <= int(code) <= 299:\n",
+    "          licznik_dobry+=1\n",
+    "      elif 400 <= int(code) < 599:\n",
+    "          licznik_zle+=1    \n",
+    "          \n",
+    "      \n",
+    "print(f'400-500: {licznik_dobry}')\n",
+    "print(f'300-400: {licznik_zle}')\n",
     " \n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"WITAJ wybierz co chcesz zrobić\")\n",
+    "\n"
    ]
   }
  ],
