--- a/for1.ipynb
+++ b/for1.ipynb
@@ -917,6 +917,7 @@
     "\n",
     "\n",
     "for word,count in words_count.items():\n",
+    "    print(f'{word}: {count}')\n",
     "    print(f'{word}: {count}')"
    ]
   }
