--- a/pyton.ipynb
+++ b/pyton.ipynb
@@ -34,12 +34,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WITAJ wybierz co chcesz zrobić\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys \n",
     "print(\"WITAJ wybierz co chcesz zrobić\")\n",
-    "\n"
+    "\n",
+    "\n",
+    "def add():\n",
+    "    pass\n",
+    "    \n",
+    "\n",
+    "def delete():\n",
+    "    pass\n",
+    " \n",
+    " \n",
+    " \n",
+    "def print_info():\n",
+    "    with open('praca.txt') as file:\n",
+    "        for line in file.readlines():\n",
+    "            \n",
+    "            \n",
+    "         print(line)\n",
+    "         print(line)\n",
+    "    \n",
+    "    \n",
+    "        "
    ]
   }
  ],
